--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,20 @@
 {
-    presets: ['es2015', 'react', 'stage-0'] 
+    "plugins": [
+      "typecheck"
+    ],
+    "env": {
+      "development": {
+        "plugins": [
+          [
+              "react-transform", {
+              transforms: [{
+                transform: 'react-transform-catch-errors',
+                imports: ['react', 'redbox-react'],
+              }]
+            }
+          ]
+        ],
+      }
+    },
+    presets: ['es2015', 'react', 'stage-0']
 }
