--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.6.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -35,6 +37,11 @@
     "file-loader": "^0.8.5",
     "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
+    "react-transform-catch-errors": "^1.0.2",
+    "redbox-react": "^1.2.6",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -43,8 +50,10 @@
   },
   "dependencies": {
     "babel": "^6.5.2",
+    "babel-plugin-typecheck": "^3.9.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2"
   }
