--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-plugin-typecheck": "^3.9.0",
+    "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-fontawesome": "^1.1.0",
